# haskeller-answers

./: .gitignore  .gitmodules  .htaccess  .travis.yml  404.html  CHANGELOG.md  README.md  all.js  cabal.project  default.nix  haskeller-answers.cabal  home.html  index.html  main.css  result
.github/workflows/: ci.yml
app/: Main.hs
client/: Main.hs
server/: Main.hs
src/: HaskellerAnswers.hs
src/HaskellerAnswers/: Client.hs  Core.hs  Server.hs
src/HaskellerAnswers/Core/: Html.hs
src/HaskellerAnswers/Server/: Answers.hs  Manifest.hs
