cabal-version:       2.4
name:                haskeller-answers
version:             0.0.0.0
synopsis:            Web app for typical Haskeller answers to everything
description:         Web app for typical Haskeller answers to everything
homepage:            https://github.com/vrom911/haskeller-answers
bug-reports:         https://github.com/vrom911/haskeller-answers/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina
maintainer:          Veronika Romashkina <vrom911@gmail.com>
copyright:           2019 vrom911
category:            Web, Application
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/vrom911/haskeller-answers.git


common common-options
  build-depends:       base ^>= 4.12.0.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DataKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeOperators
                       ViewPatterns
library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     HaskellerAnswers.Core
                           HaskellerAnswers.Core.Html

  if impl(ghcjs)
    exposed-modules:   HaskellerAnswers.Client
  if !impl(ghcjs)
    exposed-modules:  HaskellerAnswers.Server
                           HaskellerAnswers.Server.Answers
                           HaskellerAnswers.Server.Manifest

  other-modules:       Paths_haskeller_answers
  build-depends:       aeson
                     , http-types
                     , jsaddle
                     , jsaddle-warp
                     , lucid ^>= 2.9.11
                     , miso ^>= 1.2.0.0
                     , servant ^>= 0.15
                     , servant-lucid ^>= 0.8.1
                     , text
  if !impl(ghcjs)
    build-depends:     servant-server ^>= 0.15
                     , wai
                     , wai-extra
                     , warp

executable client
  import:              common-options
  if !impl(ghcjs)
    buildable: False
  hs-source-dirs:      client
  main-is:             Main.hs
  build-depends:       haskeller-answers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

executable server
  import:              common-options
  if impl(ghcjs)
    buildable: False
  hs-source-dirs:      server
  main-is:             Main.hs
  build-depends:       haskeller-answers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
