cabal-version:       2.4
name:                haskeller-answers
version:             0.0.0.0
synopsis:            Web app for typical Haskeller answers to everything
description:         Web app for typical Haskeller answers to everything
homepage:            https://github.com/vrom911/haskeller-answers
bug-reports:         https://github.com/vrom911/haskeller-answers/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina
maintainer:          Veronika Romashkina <vrom911@gmail.com>
copyright:           2019 vrom911
category:            Web, Application
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/vrom911/haskeller-answers.git


common common-options
  build-depends:       base ^>= 4.12.0.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields


  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     HaskellerAnswers
  other-modules:       Paths_haskeller_answers

  build-depends:       jsaddle
                     , jsaddle-warp
                     , miso
                     , random ^>= 1.1
                     , text

executable client
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       haskeller-answers
  ghcjs-options:       -dedupe -DGHCJS_GC_INTERVAL=5000

